Rename dashboardComponent into componentCreation

--- a/app/modules/dashboard/components/component-creation/component-creation.scss
+++ b/app/modules/dashboard/components/component-creation/component-creation.scss
@@ -1,5 +1,5 @@
-dashboard-component {
-  .dashboard-component-wrapper {
+component-creation {
+  .component-creation-wrapper {
     height: 260px;
     i.material-icons {
       font-size: 50pt;
@@ -9,9 +9,6 @@ dashboard-component {
       i.material-icons {
         color: lightgrey;
       }
-    }
-    .component-type-selection {
-
     }
   }
 }
