--- a/app/modules/dashboard/components/component-creation/line-chart/line-chart.html
+++ b/app/modules/dashboard/components/component-creation/line-chart/line-chart.html
@@ -1,37 +1,65 @@
 
-<div layout="row" layout-align="center">
-    <md-input-container flex="50">
-        <label>Serie 1</label>
-        <md-select ng-model="Line.series[0]">
-            <md-option ng-repeat="serie in Line.availableSeries" ng-value="serie">
-                {{serie.name}}
+<div layout="row" layout-align="center center">
+    <p flex="33" layout="row" layout-align="center">Serie 1</p>
+    <md-input-container flex="33">
+        <label>Sensor</label>
+        <md-select ng-model="Line.series[0].sensor">
+            <md-option ng-repeat="sensor in Line.sensors" ng-value="sensor">
+                {{sensor["rdfs:label"]}}
+            </md-option>
+        </md-select>
+    </md-input-container>
+    <md-input-container flex="33">
+        <label>Metric</label>
+        <md-select ng-model="Line.series[0].metric">
+            <md-option ng-repeat="metric in Line.metrics" ng-value="metric">
+                {{metric.name}}
             </md-option>
         </md-select>
     </md-input-container>
 </div>
 
-<div layout="row" layout-align="center">
-    <md-input-container flex="50">
-        <label>Serie 2</label>
-        <md-select ng-model="Line.series[1]" ng-disabled="!Line.series[0]">
-            <md-option ng-repeat="serie in Line.availableSeries" ng-value="serie">
-                {{serie.name}}
+<div layout="row" layout-align="center center">
+    <p flex="33" layout="row" layout-align="center" ng-class="{disabled:!Line.series[0]}">Serie 2</p>
+    <md-input-container flex="33">
+        <label>Sensor</label>
+        <md-select ng-model="Line.series[1].sensor" ng-disabled="!Line.series[0]">
+            <md-option ng-repeat="sensor in Line.sensors" ng-value="sensor">
+                {{sensor["rdfs:label"]}}
+            </md-option>
+        </md-select>
+    </md-input-container>
+    <md-input-container flex="33">
+        <label>Metric</label>
+        <md-select ng-model="Line.series[1].metric" ng-disabled="!Line.series[0]">
+            <md-option ng-repeat="metric in Line.metrics" ng-value="metric">
+                {{metric.name}}
             </md-option>
         </md-select>
     </md-input-container>
 </div>
 
-<div layout="row" layout-align="center">
-    <md-input-container flex="50">
-        <label>Serie 3</label>
-        <md-select ng-model="Line.series[2]" ng-disabled="!Line.series[1]">
-            <md-option ng-repeat="serie in Line.availableSeries" ng-value="serie">
-                {{serie.name}}
+<div layout="row" layout-align="center center">
+    <p flex="33" layout="row" layout-align="center" ng-class="{disabled:!Line.series[1]}">Serie 3</p>
+    <md-input-container flex="33">
+        <label>Sensor</label>
+        <md-select ng-model="Line.series[2].sensor" ng-disabled="!Line.series[1]">
+            <md-option ng-repeat="sensor in Line.sensors" ng-value="sensor">
+                {{sensor["rdfs:label"]}}
+            </md-option>
+        </md-select>
+    </md-input-container>
+    <md-input-container flex="33">
+        <label>Metric</label>
+        <md-select ng-model="Line.series[2].metric" ng-disabled="!Line.series[1]">
+            <md-option ng-repeat="metric in Line.metrics" ng-value="metric">
+                {{metric.name}}
             </md-option>
         </md-select>
     </md-input-container>
 </div>
 
 <div layout="row" layout-align="end">
+    <md-button class="md-warn" ng-click="Line.cancel()">Cancel</md-button>
     <md-button class="md-primary" ng-disabled="!Line.series[0]" ng-click="Line.selectSeries()">Next</md-button>
 </div>
