--- a/app/modules/dashboard/components/component-creation/map-chart/map-chart.html
+++ b/app/modules/dashboard/components/component-creation/map-chart/map-chart.html
@@ -33,5 +33,6 @@
 </div>
 
 <div layout="row" layout-align="end">
+    <md-button class="md-warn" ng-click="Map.cancel()">Cancel</md-button>
     <md-button class="md-primary" ng-disabled="!Map.position || !Map.color || !Map.size" ng-click="Map.selectMetrics()">Next</md-button>
 </div>
