--- a/app/modules/dashboard/components/widgets/line-chart-widget/line-chart-widget.html
+++ b/app/modules/dashboard/components/widgets/line-chart-widget/line-chart-widget.html
@@ -1,3 +1,6 @@
 <div class="widget-container md-whiteframe-5dp">
-    Hello Line Chart {{widgetConfig._config._name}}
+    <div class="widget-name">
+        {{widgetName}}
+    </div>
+    <div class="graph-container"></div>
 </div>
