--- a/app/modules/dashboard/components/widgets/map-chart-widget/map-chart-widget.html
+++ b/app/modules/dashboard/components/widgets/map-chart-widget/map-chart-widget.html
@@ -1,3 +1,5 @@
 <div class="widget-container md-whiteframe-5dp">
-    Hello Map Chart {{widgetName}}
+    <div class="widget-name">
+        {{widgetName}}
+    </div>
 </div>
