--- a/app/modules/dashboard/components/widgets/line-chart-widget/line-chart-widget.scss
+++ b/app/modules/dashboard/components/widgets/line-chart-widget/line-chart-widget.scss
@@ -1,5 +1,37 @@
 line-chart-widget {
   .widget-container {
     height: 260px;
+
+    .widget-name {
+      color: white;
+      background-color: #06B2F5;
+      padding: 15px;
+    }
+
+    .graph-container{
+      .axis {
+        stroke-width: 1;
+      }
+
+      .axis .tick line {
+        stroke: black;
+      }
+
+      .axis .tick text {
+        fill: black;
+        font-size: 0.7em;
+      }
+
+      .axis .domain {
+        fill: none;
+        stroke: black;
+      }
+
+      .group {
+        fill: none;
+        stroke: black;
+        stroke-width: 1.5;
+      }
+    }
   }
 }
