Display dynamic legend and labels

--- a/app/modules/dashboard/components/widgets/line-chart-widget/line-chart-widget.scss
+++ b/app/modules/dashboard/components/widgets/line-chart-widget/line-chart-widget.scss
@@ -10,6 +10,11 @@ line-chart-widget {
 
     .graph-container{
       margin-top: 10px;
+
+      .last-values {
+        background-color: white;
+      }
+
       .axis {
         stroke-width: 1;
       }
