New color palette and fix message parsing bug

--- a/app/modules/dashboard/components/widgets/line-chart-widget/line-chart-widget.scss
+++ b/app/modules/dashboard/components/widgets/line-chart-widget/line-chart-widget.scss
@@ -4,7 +4,7 @@ line-chart-widget {
 
     .widget-name {
       color: white;
-      background-color: #06B2F5;
+      background-color: #ED6A5A;
       padding: 15px;
     }
 
