--- a/app/modules/dashboard/components/widgets/map-chart-widget/map-chart-widget.scss
+++ b/app/modules/dashboard/components/widgets/map-chart-widget/map-chart-widget.scss
@@ -1,5 +1,11 @@
 map-chart-widget {
   .widget-container {
     height: 260px;
+
+    .widget-name {
+      color: white;
+      background-color: #ED6A5A;
+      padding: 15px;
+    }
   }
 }
