--- a/app/modules/dashboard/components/component-creation/map-chart/map-chart.html
+++ b/app/modules/dashboard/components/component-creation/map-chart/map-chart.html
@@ -1,38 +1,40 @@
+<div layout="column" layout-align="center stretch">
+    <div flex layout="column" layout-align="center stretch">
+        <div layout="row" layout-align="center">
+            <md-input-container flex="50">
+                <label>Metric</label>
+                <md-select ng-model="Map.unit">
+                    <md-option ng-repeat="unit in Map.units" ng-value="unit">
+                        {{unit.name}}
+                    </md-option>
+                </md-select>
+            </md-input-container>
+        </div>
+        <div layout="row" layout-align="center">
+            <md-input-container flex="50">
+                <label>Color</label>
+                <md-select ng-model="Map.color">
+                    <md-option ng-repeat="metric in Map.availableMetrics" ng-value="metric">
+                        {{metric}}
+                    </md-option>
+                </md-select>
+            </md-input-container>
+        </div>
 
-<div layout="row" layout-align="center">
-    <md-input-container flex="50">
-        <label>Position</label>
-        <md-select ng-model="Map.position">
-            <md-option ng-repeat="metric in Map.availableMetrics" ng-value="metric">
-                {{metric.name}}
-            </md-option>
-        </md-select>
-    </md-input-container>
-</div>
+        <div layout="row" layout-align="center">
+            <md-input-container flex="50">
+                <label>Size</label>
+                <md-select ng-model="Map.size">
+                    <md-option ng-repeat="metric in Map.availableMetrics" ng-value="metric">
+                        {{metric}}
+                    </md-option>
+                </md-select>
+            </md-input-container>
+        </div>
+    </div>
 
-<div layout="row" layout-align="center">
-    <md-input-container flex="50">
-        <label>Color metric</label>
-        <md-select ng-model="Map.color">
-            <md-option ng-repeat="metric in Map.availableMetrics" ng-value="metric">
-                {{metric.name}}
-            </md-option>
-        </md-select>
-    </md-input-container>
-</div>
-
-<div layout="row" layout-align="center">
-    <md-input-container flex="50">
-        <label>Size Metric</label>
-        <md-select ng-model="Map.size">
-            <md-option ng-repeat="metric in Map.availableMetrics" ng-value="metric">
-                {{metric.name}}
-            </md-option>
-        </md-select>
-    </md-input-container>
-</div>
-
-<div layout="row" layout-align="end">
-    <md-button class="md-warn" ng-click="Map.cancel()">Cancel</md-button>
-    <md-button class="md-primary" ng-disabled="!Map.position || !Map.color || !Map.size" ng-click="Map.selectMetrics()">Next</md-button>
+    <div layout="row" layout-align="end">
+        <md-button class="md-warn" ng-click="Map.cancel()">Cancel</md-button>
+        <md-button class="md-primary" ng-disabled="!Map.color || !Map.size || !Map.unit" ng-click="Map.selectMetrics()">Next</md-button>
+    </div>
 </div>
