--- a/app/modules/dashboard/dashboard.scss
+++ b/app/modules/dashboard/dashboard.scss
@@ -1,2 +1,17 @@
 .dashboard-container {
+  .widget-wrapper {
+    &.disabled {
+      position: relative;
+      &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 1;
+        background-color: rgba(255, 255, 255, 0.7);
+      }
+    }
+  }
 }
