--- a/app/modules/dashboard/components/widgets/map-chart-widget/map-chart-widget.html
+++ b/app/modules/dashboard/components/widgets/map-chart-widget/map-chart-widget.html
@@ -2,5 +2,5 @@
     <div class="widget-name">
         {{widgetName}}
     </div>
-    <div id="widgetMap"></div>
+    <div id="widgetMap{{widgetId}}" class="widgetMap"></div>
 </div>
