--- a/app/modules/dashboard/components/widgets/map-chart-widget/map-chart-widget.scss
+++ b/app/modules/dashboard/components/widgets/map-chart-widget/map-chart-widget.scss
@@ -7,7 +7,7 @@ map-chart-widget {
       background-color: #ED6A5A;
       padding: 15px;
     }
-    #widgetMap {
+    .widgetMap {
       height: 212px;
       width: 100%;
       path {
