--- a/app/modules/dashboard/components/component-creation/line-chart/line-chart.html
+++ b/app/modules/dashboard/components/component-creation/line-chart/line-chart.html
@@ -1,62 +1,46 @@
-
-<div layout="row" layout-align="center center">
-    <p flex="33" layout="row" layout-align="center">Serie 1</p>
-    <md-input-container flex="33">
-        <label>Sensor</label>
-        <md-select ng-model="Line.series[0].sensor">
-            <md-option ng-repeat="sensor in Line.sensors" ng-value="sensor">
-                {{sensor["rdfs:label"]}}
-            </md-option>
-        </md-select>
-    </md-input-container>
-    <md-input-container flex="33">
-        <label>Metric</label>
-        <md-select ng-model="Line.series[0].metric">
-            <md-option ng-repeat="metric in Line.metrics" ng-value="metric">
-                {{metric.name}}
-            </md-option>
-        </md-select>
-    </md-input-container>
-</div>
-
-<div layout="row" layout-align="center center">
-    <p flex="33" layout="row" layout-align="center" ng-class="{disabled:!Line.series[0]}">Serie 2</p>
-    <md-input-container flex="33">
-        <label>Sensor</label>
-        <md-select ng-model="Line.series[1].sensor" ng-disabled="!Line.series[0]">
-            <md-option ng-repeat="sensor in Line.sensors" ng-value="sensor">
-                {{sensor["rdfs:label"]}}
-            </md-option>
-        </md-select>
-    </md-input-container>
-    <md-input-container flex="33">
-        <label>Metric</label>
-        <md-select ng-model="Line.series[1].metric" ng-disabled="!Line.series[0]">
-            <md-option ng-repeat="metric in Line.metrics" ng-value="metric">
-                {{metric.name}}
-            </md-option>
-        </md-select>
-    </md-input-container>
-</div>
-
-<div layout="row" layout-align="center center">
-    <p flex="33" layout="row" layout-align="center" ng-class="{disabled:!Line.series[1]}">Serie 3</p>
-    <md-input-container flex="33">
-        <label>Sensor</label>
-        <md-select ng-model="Line.series[2].sensor" ng-disabled="!Line.series[1]">
-            <md-option ng-repeat="sensor in Line.sensors" ng-value="sensor">
-                {{sensor["rdfs:label"]}}
-            </md-option>
-        </md-select>
-    </md-input-container>
-    <md-input-container flex="33">
-        <label>Metric</label>
-        <md-select ng-model="Line.series[2].metric" ng-disabled="!Line.series[1]">
-            <md-option ng-repeat="metric in Line.metrics" ng-value="metric">
-                {{metric.name}}
-            </md-option>
-        </md-select>
-    </md-input-container>
+<div ng-repeat="serie in [0,1,2]" class="serie-row" layout="row" layout-align="center center">
+    <div class="color-picker-wrapper">
+        <color-picker ng-model="Line.series[serie].color"></color-picker>
+    </div>
+    <div flex>
+        <div layout="row" layout-align="center center" class="serie-def">
+            <md-input-container flex>
+                <label>Sensor</label>
+                <md-select ng-model="Line.series[serie].sensor" ng-disabled="serie !== 0 && (!Line.series[serie-1].sensor || !Line.series[serie-1].metric)">
+                    <md-option ng-repeat="sensor in Line.sensors" ng-value="sensor">
+                        {{sensor["rdfs:label"]}}
+                    </md-option>
+                </md-select>
+            </md-input-container>
+            <md-input-container flex>
+                <label>Metric</label>
+                <md-select ng-model="Line.series[serie].metric" ng-disabled="serie !== 0 && (!Line.series[serie-1].sensor || !Line.series[serie-1].metric)">
+                    <md-option ng-repeat="metric in Line.metrics" ng-value="metric">
+                        {{metric.name}}
+                    </md-option>
+                </md-select>
+            </md-input-container>
+        </div>
+        <div layout="row" layout-align="center center" class="serie-params">
+            <md-slider-container flex="66" ng-disabled="serie !== 0 && (!Line.series[serie-1].sensor || !Line.series[serie-1].metric)">
+                <span><i class="material-icons">line_weight</i></span>
+                <md-slider flex min="0" max="10" ng-model="Line.series[serie].strokeWidth">
+                </md-slider>
+                <md-input-container>
+                    <input flex type="number" ng-model="Line.series[serie].strokeWidth">
+                </md-input-container>
+            </md-slider-container>
+            <div flex layout="row" layout-align="space-around center">
+                <i class="material-icons">line_style</i>
+                <md-button ng-click="Line.series[serie].lineType = 'full'" ng-class="{'md-primary':Line.series[serie].lineType === 'full'}" class="md-fab md-mini md-raised" layout="row" layout-align="center" ng-disabled="serie !== 0 && (!Line.series[serie-1].sensor || !Line.series[serie-1].metric)">
+                    <i class="material-icons">remove</i>
+                </md-button>
+                <md-button ng-click="Line.series[serie].lineType = 'dotted'" ng-class="{'md-primary':Line.series[serie].lineType === 'dotted'}" class="md-fab md-mini md-raised" layout="row" layout-align="center" ng-disabled="serie !== 0 && (!Line.series[serie-1].sensor || !Line.series[serie-1].metric)">
+                    <i class="material-icons">more_horiz</i>
+                </md-button>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div layout="row" layout-align="end">
