--- a/app/modules/dashboard/components/component-creation/line-chart/line-chart.html
+++ b/app/modules/dashboard/components/component-creation/line-chart/line-chart.html
@@ -1,49 +1,62 @@
-<div ng-repeat="serie in [0,1,2]" class="serie-row" layout="row" layout-align="center center">
-    <div class="color-picker-wrapper">
-        <color-picker ng-model="Line.series[serie].color"></color-picker>
-    </div>
-    <div flex>
-        <div layout="row" layout-align="center center" class="serie-def">
-            <md-input-container flex>
-                <label>Sensor</label>
-                <md-select ng-model="Line.series[serie].sensor" ng-disabled="serie !== 0 && (!Line.series[serie-1].sensor || !Line.series[serie-1].metric)">
-                    <md-option ng-repeat="sensor in Line.sensors" ng-value="sensor">
-                        {{sensor["rdfs:label"]}}
-                    </md-option>
-                </md-select>
-            </md-input-container>
-            <md-input-container flex>
-                <label>Metric</label>
-                <md-select ng-model="Line.series[serie].metric" ng-disabled="serie !== 0 && (!Line.series[serie-1].sensor || !Line.series[serie-1].metric)">
-                    <md-option ng-repeat="metric in Line.metrics" ng-value="metric">
-                        {{metric.name}}
-                    </md-option>
-                </md-select>
-            </md-input-container>
-        </div>
-        <div layout="row" layout-align="center center" class="serie-params">
-            <md-slider-container flex="66" ng-disabled="serie !== 0 && (!Line.series[serie-1].sensor || !Line.series[serie-1].metric)">
-                <span><i class="material-icons">line_weight</i></span>
-                <md-slider flex min="0" max="10" ng-model="Line.series[serie].strokeWidth">
-                </md-slider>
-                <md-input-container>
-                    <input flex type="number" ng-model="Line.series[serie].strokeWidth">
-                </md-input-container>
-            </md-slider-container>
-            <div flex layout="row" layout-align="space-around center">
-                <i class="material-icons">line_style</i>
-                <md-button ng-click="Line.series[serie].lineType = 'full'" ng-class="{'md-primary':Line.series[serie].lineType === 'full'}" class="md-fab md-mini md-raised" layout="row" layout-align="center" ng-disabled="serie !== 0 && (!Line.series[serie-1].sensor || !Line.series[serie-1].metric)">
-                    <i class="material-icons">remove</i>
-                </md-button>
-                <md-button ng-click="Line.series[serie].lineType = 'dotted'" ng-class="{'md-primary':Line.series[serie].lineType === 'dotted'}" class="md-fab md-mini md-raised" layout="row" layout-align="center" ng-disabled="serie !== 0 && (!Line.series[serie-1].sensor || !Line.series[serie-1].metric)">
-                    <i class="material-icons">more_horiz</i>
-                </md-button>
+<div layout="column" layout-align="center stretch">
+    <div flex layout="column" layout-align="center stretch">
+        <div ng-repeat="serie in [0,1,2]" class="serie-row" layout="row" layout-align="center center">
+            <div class="color-picker-wrapper">
+                <color-picker ng-model="Line.series[serie].color"></color-picker>
+            </div>
+            <div flex>
+                <div layout="row" layout-align="center center" class="serie-def">
+                    <md-input-container flex="66">
+                        <label>Sensor</label>
+                        <md-select ng-model="Line.series[serie].sensor">
+                            <md-option ng-repeat="sensor in Line.sensors" ng-value="sensor">
+                                {{sensor["rdfs:label"]}}
+                            </md-option>
+                        </md-select>
+                    </md-input-container>
+                    <md-input-container flex>
+                        <label>Metric</label>
+                        <md-select ng-model="Line.series[serie].metric">
+                            <md-option ng-repeat="metric in Line.metrics" ng-value="metric">
+                                {{metric.name}}
+                            </md-option>
+                        </md-select>
+                    </md-input-container>
+                </div>
+                <div layout="row" layout-align="center center" class="serie-params" ng-show="Line.openedSettings === serie">
+                    <md-slider-container flex="66">
+                        <span>
+                            <md-tooltip md-direction="top">Serie weight</md-tooltip>
+                            <i class="material-icons grey-icon">line_weight</i>
+                        </span>
+                        <md-slider flex min="1" max="9" ng-model="Line.series[serie].strokeWidth">
+                        </md-slider>
+                        <md-input-container>
+                            <input flex type="number" ng-model="Line.series[serie].strokeWidth" min="1" max="9">
+                        </md-input-container>
+                    </md-slider-container>
+                    <div flex layout="row" layout-align="space-around center">
+                        <span>
+                            <md-tooltip md-direction="top">Serie style</md-tooltip>
+                            <i class="material-icons grey-icon">line_style</i>
+                        </span>
+                        <md-button ng-click="Line.series[serie].lineType = 'full'" ng-class="{'md-primary':Line.series[serie].lineType === 'full'}" class="md-fab md-mini md-raised" layout="row" layout-align="center">
+                            <i class="material-icons">remove</i>
+                        </md-button>
+                        <md-button ng-click="Line.series[serie].lineType = 'dotted'" ng-class="{'md-primary':Line.series[serie].lineType === 'dotted'}" class="md-fab md-mini md-raised" layout="row" layout-align="center">
+                            <i class="material-icons">more_horiz</i>
+                        </md-button>
+                    </div>
+                </div>
+            </div>
+            <div class="settings-icon" ng-click="Line.toggleSettings(serie)">
+                <i class="material-icons grey-icon" ng-class="{disabled: serie !== 0 && (!Line.series[serie-1].sensor || !Line.series[serie-1].metric)}">settings</i>
             </div>
         </div>
     </div>
-</div>
 
-<div layout="row" layout-align="end">
-    <md-button class="md-warn" ng-click="Line.cancel()">Cancel</md-button>
-    <md-button class="md-primary" ng-disabled="!Line.series[0]" ng-click="Line.selectSeries()">Next</md-button>
+    <div layout="row" layout-align="end">
+        <md-button class="md-warn" ng-click="Line.cancel()">Cancel</md-button>
+        <md-button class="md-primary" ng-disabled="!Line.series[0] && !Line.series[1] && !Line.series[2]" ng-click="Line.selectSeries()">Next</md-button>
+    </div>
 </div>
