--- a/app/modules/dashboard/components/widgets/widget-core/widget-core.html
+++ b/app/modules/dashboard/components/widgets/widget-core/widget-core.html
@@ -1,7 +1,24 @@
 <div class="widget-container md-whiteframe-5dp">
-    <div class="widget-name">
-        {{widgetName}}
+    <div class="widget-header" layout="row" layout-align="center center">
+        <span flex>
+            {{widgetName}}
+        </span>
+        <i class="material-icons">settings</i>
+        <i class="material-icons" ng-click="deleteConfirm = true">close</i>
     </div>
-    <line-chart-widget ng-if="widgetConfig._type === 'LineChart'" latest-entry="latestEntry" widget-config="widgetConfig"></line-chart-widget>
-    <map-chart-widget ng-if="widgetConfig._type === 'MapChart'" latest-entry="latestEntry" widget-config="widgetConfig" sensors="sensors" widget-id="1"></map-chart-widget>
+    <div ng-hide="deleteConfirm">
+        <line-chart-widget ng-if="widgetConfig._type === 'LineChart'" latest-entry="latestEntry" widget-config="widgetConfig"></line-chart-widget>
+        <map-chart-widget ng-if="widgetConfig._type === 'MapChart'" latest-entry="latestEntry" widget-config="widgetConfig" sensors="sensors" widget-id="1"></map-chart-widget>
+    </div>
+    <div class="close-confirm" ng-show="deleteConfirm" layout="column" layout-align="center stretch">
+        <h4 layout="row" layout-align="center">Are you sure you want to delete this widget ?</h4>
+        <div layout="row" layout-align="space-around center">
+            <md-button class="md-warn" ng-click="deleteConfirm = false">
+                Cancel
+            </md-button>
+            <md-button class="md-raised md-primary" ng-click="deleteWidget({widgetId: widgetId})">
+                Delete
+            </md-button>
+        </div>
+    </div>
 </div>
