Store widget configs in locale storage and restore on load + simplify Classes (public attributes, no more getters/setters)

--- a/app/modules/dashboard/components/widgets/widget-core/widget-core.html
+++ b/app/modules/dashboard/components/widgets/widget-core/widget-core.html
@@ -7,8 +7,8 @@
         <i class="material-icons" ng-click="deleteConfirm = true">close</i>
     </div>
     <div ng-hide="deleteConfirm">
-        <line-chart-widget ng-if="widgetConfig._type === 'LineChart'" latest-entry="latestEntry" widget-config="widgetConfig"></line-chart-widget>
-        <map-chart-widget ng-if="widgetConfig._type === 'MapChart'" latest-entry="latestEntry" widget-config="widgetConfig" sensors="sensors" widget-id="1"></map-chart-widget>
+        <line-chart-widget ng-if="widgetConfig.type === 'LineChart'" latest-entry="latestEntry" widget-config="widgetConfig"></line-chart-widget>
+        <map-chart-widget ng-if="widgetConfig.type === 'MapChart'" latest-entry="latestEntry" widget-config="widgetConfig" sensors="sensors" widget-id="1"></map-chart-widget>
     </div>
     <div class="close-confirm" ng-show="deleteConfirm" layout="column" layout-align="center stretch">
         <h4 layout="row" layout-align="center">Are you sure you want to delete this widget ?</h4>
