--- a/app/modules/dashboard/components/component-creation/component-creation.html
+++ b/app/modules/dashboard/components/component-creation/component-creation.html
@@ -14,14 +14,14 @@
                 <label>Choose a stream</label>
                 <md-select ng-model="Component.componentStream">
                     <md-option ng-repeat="stream in Component.streams" ng-value="stream">
-                        {{stream._label}}
+                        {{stream.label}}
                     </md-option>
                 </md-select>
             </md-input-container>
         </div>
         <div layout="row" layout-align="end">
             <md-button class="md-warn" ng-click="Component.cancel()">Cancel</md-button>
-            <md-button class="md-primary" ng-disabled="!Component.componentStream._id" ng-click="Component.selectStream()">Next</md-button>
+            <md-button class="md-primary" ng-disabled="!Component.componentStream.id" ng-click="Component.selectStream()">Next</md-button>
         </div>
     </div>
     <div ng-if="Component.initStep === 3" flex ng-switch="Component.componentType">
