--- a/app/modules/dashboard/components/component-creation/map-chart/map-chart.html
+++ b/app/modules/dashboard/components/component-creation/map-chart/map-chart.html
@@ -2,7 +2,7 @@
     <div flex layout="column" layout-align="center stretch">
         <div layout="row" layout-align="center">
             <md-input-container flex="50">
-                <label>Metric</label>
+                <label>Métrique</label>
                 <md-select ng-model="Map.unit">
                     <md-option ng-repeat="unit in Map.units" ng-value="unit">
                         {{unit.name}}
@@ -12,7 +12,7 @@
         </div>
         <div layout="row" layout-align="center">
             <md-input-container flex="50">
-                <label>Color</label>
+                <label>Couleur des noeuds</label>
                 <md-select ng-model="Map.color">
                     <md-option ng-repeat="metric in Map.availableMetrics" ng-value="metric">
                         {{metric}}
@@ -23,7 +23,7 @@
 
         <div layout="row" layout-align="center">
             <md-input-container flex="50">
-                <label>Size</label>
+                <label>Taille des noeuds</label>
                 <md-select ng-model="Map.size">
                     <md-option ng-repeat="metric in Map.availableMetrics" ng-value="metric">
                         {{metric}}
@@ -34,7 +34,7 @@
     </div>
 
     <div layout="row" layout-align="end">
-        <md-button class="md-warn" ng-click="Map.cancel()">Cancel</md-button>
-        <md-button class="md-primary" ng-disabled="!Map.color || !Map.size || !Map.unit" ng-click="Map.selectMetrics()">Next</md-button>
+        <md-button class="md-warn" ng-click="Map.cancel()">Annuler</md-button>
+        <md-button class="md-primary" ng-disabled="!Map.color || !Map.size || !Map.unit" ng-click="Map.selectMetrics()">Suivant</md-button>
     </div>
 </div>
