--- a/app/global.scss
+++ b/app/global.scss
@@ -1,4 +1,5 @@
 html {
+  position: relative;
   .global-dropback {
     position: fixed;
     top: 0;
@@ -7,7 +8,7 @@ html {
     left: 0;
     z-index: 50;
     background-color: transparent;
-    cursor: default;
+    cursor: default !important;
   }
   i.material-icons {
     &:focus {
