Fix line chart timeline incoherences (map timestamps between chart and axis)

--- a/app/modules/dashboard/components/widgets/widget-core/widget-core.html
+++ b/app/modules/dashboard/components/widgets/widget-core/widget-core.html
@@ -5,7 +5,7 @@
         </span>
         <span>
             <md-tooltip md-direction="top">Modifier les paramètres</md-tooltip>
-            <i class="material-icons" ng-click="modifyWidget({widgetId: widgetId, widgetConfig: widgetConfig})">settings</i>
+            <i class="material-icons" ng-click="modifyWidget({widgetId: widgetId})">settings</i>
         </span>
         <span>
             <md-tooltip md-direction="top">Supprimer la visualisation</md-tooltip>
